# feup-aeda

./: README.md
1st project - PITCH/: Client.h  Exception.cpp  Exception.h  Pitch.cpp  Pitch.h  User_interface.h  Utils.h
1st project - PITCH/docs/: Doxyfile
1st project - PITCH/docs/output/html/: _user__interface_8h_source.html  class_client-members.html  class_client.html  class_employee-members.html  class_exception.html  class_invalid_date-members.html  class_not_a_service_provider-members.html  class_not_an_entrepreneur-members.html  class_particular_client.html  class_pitch.html  class_time-members.html  class_time.html  md__c___users__margarida__viera__desktop_uni.html  menudata.js  struct_moves-members.html
1st project - PITCH/docs/output/html/search/: all_0.js  all_5.js  all_7.js  all_b.js  classes_2.js  classes_7.js  classes_a.js  functions_3.js  functions_5.js
1st project/code/: CMakeLists.txt  Client.cpp  Employee.cpp  Employee.h  Lift.cpp  Lift.h  User_interface.cpp  Utils.cpp  main.cpp
1st project/documentation/html/: _exception_8h_source.html  _lift_8h_source.html  _pitch_8h_source.html  _utils_8h_source.html  class_client_dies_not_exist.html  class_client_does_not_have_an_employee_associated-members.html  class_date-members.html  class_date.html  class_employee_does_not_exist-members.html  class_employee_has_not_uncompleted_tasks-members.html  class_employee_has_not_uncompleted_tasks.html  class_invalid_num_floors-members.html  class_invalid_num_floors.html  class_lift_does_not_exist-members.html  class_lift_does_not_exist.html  class_not_a_service_provider.html  class_not_an_entrepreneur.html  class_particular_client-members.html  class_pitch-members.html  class_service_provider-members.html  class_service_provider.html  class_task-members.html  class_task.html  class_user__interface.html  files.html  functions.html  functions_vars.html  pages.html  struct_maintenance.html
1st project/documentation/html/search/: all_2.js  all_3.js  all_4.js  all_6.js  all_9.js  all_a.js  all_d.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  functions_1.js  functions_4.js  variables_0.js  variables_2.js
2nd project/code/: CMakeLists.txt  Client.cpp  Client.h  Employee.cpp  Employee.h  Exception.cpp  Exception.h  Lift.cpp  Lift.h  Maintenance.cpp  Maintenance.h  Pitch.cpp  Pitch.h  User_interface.cpp  User_interface.h  Utils.cpp  Utils.h  bst.h  main.cpp
2nd project/documentation/html/: _client_8h_source.html  _employee_8h_source.html  annotated.html  class_client_dies_not_exist-members.html  class_client_does_not_have_an_employee_associated.html  class_contracted_employee-members.html  class_contracted_employee.html  class_employee.html  class_employee_does_not_exist.html  class_employee_is_busy-members.html  class_employee_is_busy.html  class_employee_not_associated_to_client-members.html  class_employee_not_associated_to_client.html  class_entrepreneur-members.html  class_entrepreneur.html  class_invalid_date.html  class_invalid_time-members.html  class_invalid_time.html  class_lift-members.html  class_lift.html  class_user__interface-members.html  classes.html  functions_func.html  hierarchy.html  struct_maintenance-members.html  struct_moves.html
2nd project/documentation/html/search/: all_1.js  all_8.js  all_c.js  classes_0.js  functions_0.js  functions_2.js  functions_6.js  searchdata.js  variables_1.js
2nd project/other documents/: presentation.pptx
aeda1819_ci1/Tests/: Account.h  Bank.cpp  Bank.h
aeda1920_ci1/Tests/: Hotel.h
aeda1920_ci2/Tests/: Box.cpp  ThinTallBox.cpp
aeda2021_p01/: main.cpp
aeda2021_p01/Tests/: tests.cpp
aeda2021_p02/: CMakeLists.txt
aeda2021_p02/Tests/: vehicle.cpp
aeda2021_p02_extra/: CMakeLists.txt
aeda2021_p02_extra/Tests/: animal.h  tests.cpp
aeda2021_p02_extra/docs/output/html/: animal_8h_source.html  class_animal-members.html  class_flying-members.html  class_veterinary.html  dir_33c78a012c8d08979f57a54a07694c46.html  files.html  veterinary_8h_source.html
aeda2021_p02_extra/docs/output/html/search/: all_1.js  all_2.js
aeda2021_p04/Tests/: carPark.cpp  carPark.h
aeda2021_p05/Tests/: tests.cpp
aeda2021_p07/Tests/: game.cpp  game.h  tests.cpp
aeda2021_p09/Tests/: bet.cpp  bet.h  player.cpp  player.h  tests.cpp
aeda2021_p10/Tests/: box.cpp  packagingMachine.cpp  tests.cpp
practical individual components/aeda1516_ci4/src/: Cinema.cpp  CinemaFinder.cpp  CinemaFinder.h  Film.cpp  FilmTime.cpp  FilmTime.h  Test.cpp
practical individual components/aeda1617_ci3/src/: Book.cpp  ReadingClub.cpp  ReadingClub.h  User.cpp
practical individual components/aeda1718_ci3/src/: Expertize.cpp  FEUPConsulting.cpp  FEUPConsulting.h  Project.cpp  Student.cpp
practical individual components/aeda1819_ci1/Tests/: Account.cpp  BankOfficer.cpp  BankOfficer.h  tests.cpp
practical individual components/aeda1819_ci2/Tests/: CSimpleList.h  CStack.h  Kart.cpp  Kart.h  tests.cpp
practical individual components/aeda1819_ci3/Tests/: Client.cpp  Property.h  PropertyTypeItem.cpp  REAgency.cpp  REAgency.h  tests.cpp
practical individual components/aeda1920_ci1/Tests/: Room.cpp  tests.cpp
practical individual components/aeda1920_ci2/Tests/: Warehouse.cpp  WideFlatBox.cpp  tests.cpp
practical individual components/aeda1920_ci3/Tests/: Gallery.cpp  Gallery.h  Paint.cpp  Paint.h  tests.cpp
weekly practical exercises/aeda2021_p01/: CMakeLists.txt
weekly practical exercises/aeda2021_p01/Tests/: parque.cpp
weekly practical exercises/aeda2021_p02/Tests/: fleet.cpp  fleet.h  tests.cpp  vehicle.h
weekly practical exercises/aeda2021_p02_extra/Tests/: animal.cpp  veterinary.cpp  zoo.cpp
weekly practical exercises/aeda2021_p03/Tests/: graph.h  tests.cpp
weekly practical exercises/aeda2021_p04/Tests/: sequentialSearch.h  tests.cpp
weekly practical exercises/aeda2021_p05/Tests/: game.cpp  kid.cpp
weekly practical exercises/aeda2021_p07/Tests/: dictionary.cpp  dictionary.h
weekly practical exercises/aeda2021_p10/Tests/: box.h
(+23 files in other folders)
